packages/tree-sitter-grammar/grammar.js
module.exports = grammar({
  name: 'grigson',

  extras: (_$) => [/[ \t]/],

  rules: {
    song: ($) =>
      seq(optional($.frontmatter), repeat(choice($.comment, $.section_label, $.row, /\r?\n/))),

    comment: (_$) => /#[^\r\n]*/,

    section_label: ($) => seq('[', $.section_name, ']', optional($.section_key_annotation)),

    section_name: (_$) => /[^\]\r\n]+/,

    section_key_annotation: ($) => seq('key', ':', $.frontmatter_value),

    frontmatter: ($) =>
      seq($.frontmatter_delimiter, repeat($.frontmatter_field), $.frontmatter_delimiter),

    frontmatter_delimiter: (_$) => /---[ \t]*\r?\n/,

    frontmatter_field: ($) => seq($.frontmatter_key, ':', $.frontmatter_value, /\r?\n/),

    frontmatter_key: (_$) => /[a-zA-Z]+/,

    frontmatter_value: ($) => choice($.quoted_string, $.unquoted_value),

    quoted_string: (_$) => /"[^"]*"/,

    unquoted_value: (_$) => /[^\r\n\t "][^\r\n]*/,

    row: ($) => seq($.open_barline, repeat1($.bar_tail)),

    bar_tail: ($) =>
      choice(
        seq(optional($.time_signature), repeat1($.beat_cell), $.close_barline),
        seq($.simile_mark, $.close_barline),
      ),

    simile_mark: (_$) => '%',

    beat_cell: ($) => choice($.tonality_hint, $.chord, $.dot),

    tonality_hint: ($) => seq('{', $.tonality_hint_key, '}'),

    tonality_hint_key: (_$) => /home|[A-G][#b]?\s+(?:major|minor|dorian|aeolian|mixolydian)/,

    dot: (_$) => '.',

    open_barline: (_$) => token(choice(':||:', ':||', '||:', '||', '|')),

    close_barline: (_$) =>
      token(choice(/:\|\|x\d+:/, /:\|\|x\d+/, ':||:', ':||', '||:', '||.', '||', '|')),

    time_signature: ($) => seq('(', $.integer, '/', $.integer, ')'),

    integer: (_$) => /[0-9]+/,

    chord: ($) =>
      seq($.note_letter, optional($.accidental), optional($.quality), optional($.slash_bass)),

    slash_bass: ($) => seq('/', $.note_letter, optional($.accidental)),

    note_letter: (_$) => /[A-G]/,

    accidental: (_$) => token.immediate(/[#b]/),

    quality: (_$) =>
      token.immediate(
        choice(
          'm7b5',
          'maj7',
          'M7',
          'dim7',
          'm7',
          'dim',
          'm',
          '7b13',
          '7b9',
          '7#9',
          '7#5',
          '7b5',
          '7',
          'sus4',
          'sus2',
          '13',
          '11',
          '9',
          '6',
          '-',
        ),
      ),
  },
});
