packages/tree-sitter-grammar/test/corpus/bars.txt
================================================================================
Single-bar row
================================================================================

| C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Four-bar row
================================================================================

| C | Am | F | G |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Bar with 4/4 time signature
================================================================================

| (4/4) C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (time_signature
        (integer)
        (integer))
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
First bar has time signature, second does not
================================================================================

| (4/4) C | Am |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (time_signature
        (integer)
        (integer))
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Bar with 6/8 time signature
================================================================================

| (6/8) G7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (time_signature
        (integer)
        (integer))
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Mixed accidentals and qualities across bars
================================================================================

| F# | Bb | Am | G7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (accidental)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (accidental)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Bar with multiple chords (beat cells)
================================================================================

| C Am |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Bar with chord dot chord
================================================================================

| C . Am |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (beat_cell
        (dot))
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Bar with leading time signature and multiple beat cells
================================================================================

| (3/4) C . . |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (time_signature
        (integer)
        (integer))
      (beat_cell
        (chord
          (note_letter)))
      (beat_cell
        (dot))
      (beat_cell
        (dot))
      (close_barline))))

================================================================================
Double barline open
================================================================================

|| C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Double final barline close
================================================================================

| C ||

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Double dotted barline close
================================================================================

| C ||.

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Start repeat open barline
================================================================================

||: C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
End repeat close barline
================================================================================

| C :||

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
End repeat with count close barline
================================================================================

| C :||x2

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
End and start repeat barline
================================================================================

| C :||:

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
End repeat with count and start repeat barline
================================================================================

| C :||x2:

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Start repeat open with end repeat close
================================================================================

||: C | F :||

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))
