packages/tree-sitter-grammar/test/corpus/chords.txt
================================================================================
Natural chord
================================================================================

| C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))

================================================================================
Sharp chord
================================================================================

| F# |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (accidental)))
      (close_barline))))

================================================================================
Flat chord
================================================================================

| Bb |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (accidental)))
      (close_barline))))

================================================================================
Minor chord
================================================================================

| Am |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Dominant seventh chord
================================================================================

| G7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Half-diminished chord
================================================================================

| Bm7b5 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Extended chord qualities
================================================================================

| Cmaj7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
CM7 quality
================================================================================

| CM7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Minor seventh chord
================================================================================

| Dm7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Diminished seventh chord
================================================================================

| Bdim7 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Slash chord with natural bass
================================================================================

| F/C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (slash_bass
            (note_letter))))
      (close_barline))))

================================================================================
Slash chord with minor quality and flat bass
================================================================================

| Am/E |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)
          (slash_bass
            (note_letter))))
      (close_barline))))

================================================================================
Slash chord with dash quality and flat bass
================================================================================

| C-/Bb |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)
          (slash_bass
            (note_letter)
            (accidental))))
      (close_barline))))

================================================================================
Dominant seventh flat five chord (7b5)
================================================================================

| G7b5 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Dash minor seventh chord (-)
================================================================================

| C- |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Dominant seventh flat thirteen chord (7b13)
================================================================================

| G7b13 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Dominant seventh flat nine chord (7b9)
================================================================================

| G7b9 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Dominant seventh sharp nine chord (7#9)
================================================================================

| G7#9 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Dominant seventh sharp five chord (7#5)
================================================================================

| G7#5 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Suspended fourth chord (sus4)
================================================================================

| Csus4 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Suspended second chord (sus2)
================================================================================

| Csus2 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Thirteenth chord (13)
================================================================================

| G13 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Eleventh chord (11)
================================================================================

| G11 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Ninth chord (9)
================================================================================

| G9 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))

================================================================================
Sixth chord (6)
================================================================================

| C6 |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))
