packages/tree-sitter-grammar/test/corpus/comments.txt
================================================================================
Standalone comment line
================================================================================

# This is a comment

--------------------------------------------------------------------------------

(song
  (comment))

================================================================================
Comment before a section label
================================================================================

# intro
[A]

--------------------------------------------------------------------------------

(song
  (comment)
  (section_label
    (section_name))
  )

================================================================================
Comment between rows
================================================================================

| C | F |
# a comment between rows
| G | C |

--------------------------------------------------------------------------------

(song
  (row
    (open_barline)
    (bar_tail
      (beat_cell (chord (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell (chord (note_letter)))
      (close_barline)))
  (comment)
  (row
    (open_barline)
    (bar_tail
      (beat_cell (chord (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell (chord (note_letter)))
      (close_barline))))
