packages/tree-sitter-grammar/test/corpus/frontmatter.txt
================================================================================
Frontmatter with title field
================================================================================
---
title: My Song
---

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_delimiter)))

================================================================================
Frontmatter with title and key fields
================================================================================
---
title: My Song
key: C
---

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_delimiter)))

================================================================================
Frontmatter with quoted value
================================================================================
---
title: "All The Things"
---

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (quoted_string)))
    (frontmatter_delimiter)))

================================================================================
Frontmatter with unquoted value containing special characters
================================================================================
---
key: F#
---

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_delimiter)))

================================================================================
Empty frontmatter
================================================================================
---
---

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_delimiter)))

================================================================================
Frontmatter followed by a row
================================================================================
---
key: C
---
| C | Am |

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_delimiter))
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))
