packages/tree-sitter-grammar/test/corpus/sections.txt
================================================================================
Section label A produces section_label with section_name
================================================================================

[A]

--------------------------------------------------------------------------------

(song
  (section_label
    (section_name)))

================================================================================
Section label Chorus produces section_label with section_name Chorus
================================================================================

[Chorus]

--------------------------------------------------------------------------------

(song
  (section_label
    (section_name)))

================================================================================
Song with two section labels produces two section_label nodes
================================================================================

[A]
[B]

--------------------------------------------------------------------------------

(song
  (section_label
    (section_name))
  (section_label
    (section_name)))

================================================================================
Section label with key annotation
================================================================================

[Chorus] key: C major

--------------------------------------------------------------------------------

(song
  (section_label
    (section_name)
    (section_key_annotation
      (frontmatter_value
        (unquoted_value)))))

================================================================================
Section label with quoted key annotation
================================================================================

[Verse] key: "F# minor"

--------------------------------------------------------------------------------

(song
  (section_label
    (section_name)
    (section_key_annotation
      (frontmatter_value
        (quoted_string)))))

================================================================================
Section label immediately followed by a row
================================================================================

[A]
| C | Am |

--------------------------------------------------------------------------------

(song
  (section_label
    (section_name))
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))))
