packages/tree-sitter-grammar/test/corpus/song.txt
================================================================================
Full song combining frontmatter, two section labels, and rows
================================================================================
---
title: My Song
key: C
---
[A]
| C | Am |
| F | G |

[B]
| Dm | G7 |
| C | C |

--------------------------------------------------------------------------------

(song
  (frontmatter
    (frontmatter_delimiter)
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_field
      (frontmatter_key)
      (frontmatter_value
        (unquoted_value)))
    (frontmatter_delimiter))
  (section_label
    (section_name))
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline)))
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline)))
  (section_label
    (section_name))
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)
          (quality)))
      (close_barline)))
  (row
    (open_barline)
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))
    (bar_tail
      (beat_cell
        (chord
          (note_letter)))
      (close_barline))))
